# 2022_tomocube_metadata_extractor

./: .env.secret  .gitignore  Dockerfile  README.md  credentials.json.secret  docker-compose.yaml  main.py  pyproject.toml  token.json.secret
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
sql/: create_each_project_table.sql  create_project_table.sql  create_project_tables.sql
src/: cell.py  database.py  gdrive.py  image.py  logger.py  mysql_backup.sh  parser.py  patient.py  project.py  project_group.json  s3.py  target_project.txt  type.py  util.py
tests/: test_image.py
