[tool.poetry]
name = "google_driver_file_list"
version = "0.1.0"
description = ""
authors = ["MinDong <mdskylover@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
google-api-python-client = "^2.45.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
notebook = "^6.4.11"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
